# trading-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: dependencies.py  health.py  router.py
app/clients/: exbo_database.py  stalzone.py
app/core/: config.py
app/db/: session.py
app/modules/admin/: routes.py  schemas.py  service.py
app/modules/auction/: routes.py
app/modules/history/: domain.py  models.py  repository.py  schemas.py  service.py  worker.py
app/modules/items/: routes.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 20260628_01_history_storage.py  20260628_02_official_api.py  20260629_03_hourly_aggregates_only.py  20260629_04_bounded_history_backfill.py
scripts/: collect_all_stalzone_samples.py  collect_stalzone_samples.py
tests/: test_active_lots.py  test_exbo_database.py  test_history_domain.py  test_history_repository.py  test_history_service.py  test_history_worker.py  test_item_status.py  test_stalzone_client.py
